--- a/react/package.json
+++ b/react/package.json
@@ -43,8 +43,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:9000",
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "description": "Rasoi Tak",
   "main": "index.js",
   "devDependencies": {},
   "keywords": [],
