--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@loadable/component": "^5.13.2",
     "@loadable/server": "^5.13.2",
     "axios": "^0.20.0",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
