--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@loadable/component": "^5.13.2",
     "@loadable/server": "^5.13.2",
     "axios": "^0.20.0",
-    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.0",
     "multer": "^1.4.2",
     "react": "^16.13.1",
@@ -53,7 +54,6 @@
     "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
     "webpack-node-externals": "^2.5.2"
   },
   "engines": {
